--- a/advanced math/advanced math.vcxproj
+++ b/advanced math/advanced math.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="equations\sle.h" />
     <ClInclude Include="equations\solver.h" />
     <ClInclude Include="equations\solver_sle_inverse.h" />
+    <ClInclude Include="equations\solver_sle_lu.h" />
     <ClInclude Include="equations\solver_sle_triangular.h" />
     <ClInclude Include="function\function_exponent.h" />
     <ClInclude Include="function\function.h" />
@@ -173,7 +174,6 @@
     <ClInclude Include="interpolation\interpolator_polynomial_newton.h" />
     <ClInclude Include="matrix.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
     <ClInclude Include="vector.h" />
   </ItemGroup>
   <ItemGroup>
