--- a/advanced math/advanced math.vcxproj.filters
+++ b/advanced math/advanced math.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClInclude Include="equations\equation_differential.h">
       <Filter>Source Files\Equations\Differential</Filter>
     </ClInclude>
+    <ClInclude Include="equations\solver_predictor_corrector.h">
+      <Filter>Source Files\Equations\Differential</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="function\function.cpp">
