--- a/advanced math/advanced math.vcxproj.filters
+++ b/advanced math/advanced math.vcxproj.filters
@@ -19,12 +19,6 @@
     <Filter Include="Source Files\Functions\Instances">
       <UniqueIdentifier>{da8abc4b-04b0-413c-888d-a1077fd6b17a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Interpolation">
-      <UniqueIdentifier>{277e40b1-5afb-4aad-ad10-2836f16ef9a1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Interpolation\Instances">
-      <UniqueIdentifier>{08ef0c2b-a046-458d-b2e0-d7dec008e189}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Grids">
       <UniqueIdentifier>{a2eb56d5-e8f4-4fc2-a54c-ed74a429dc17}</UniqueIdentifier>
     </Filter>
@@ -43,6 +37,12 @@
     <Filter Include="Source Files\Equations\Linear">
       <UniqueIdentifier>{13fd08ab-a781-41ad-98a3-760f8d034d61}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Approximation">
+      <UniqueIdentifier>{277e40b1-5afb-4aad-ad10-2836f16ef9a1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Approximation\Instances">
+      <UniqueIdentifier>{08ef0c2b-a046-458d-b2e0-d7dec008e189}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -52,7 +52,7 @@
       <Filter>Source Files\Functions</Filter>
     </ClInclude>
     <ClInclude Include="interpolation\interpolator.h">
-      <Filter>Source Files\Interpolation</Filter>
+      <Filter>Source Files\Approximation</Filter>
     </ClInclude>
     <ClInclude Include="definitions.h">
       <Filter>Source Files</Filter>
@@ -103,13 +103,13 @@
       <Filter>Source Files\Integration\Instances</Filter>
     </ClInclude>
     <ClInclude Include="interpolation\interpolator_least_squares.h">
-      <Filter>Source Files\Interpolation\Instances</Filter>
+      <Filter>Source Files\Approximation\Instances</Filter>
     </ClInclude>
     <ClInclude Include="interpolation\interpolator_polynomial_hermit.h">
-      <Filter>Source Files\Interpolation\Instances</Filter>
+      <Filter>Source Files\Approximation\Instances</Filter>
     </ClInclude>
     <ClInclude Include="interpolation\interpolator_polynomial_newton.h">
-      <Filter>Source Files\Interpolation\Instances</Filter>
+      <Filter>Source Files\Approximation\Instances</Filter>
     </ClInclude>
     <ClInclude Include="equations\solver_sle_lu.h">
       <Filter>Source Files\Equations\Linear</Filter>
@@ -177,13 +177,13 @@
       <Filter>Source Files\Integration\Instances</Filter>
     </ClCompile>
     <ClCompile Include="interpolation\interpolator_least_squares.cpp">
-      <Filter>Source Files\Interpolation\Instances</Filter>
+      <Filter>Source Files\Approximation\Instances</Filter>
     </ClCompile>
     <ClCompile Include="interpolation\interpolator_polynomial_hermit.cpp">
-      <Filter>Source Files\Interpolation\Instances</Filter>
+      <Filter>Source Files\Approximation\Instances</Filter>
     </ClCompile>
     <ClCompile Include="interpolation\interpolator_polynomial_newton.cpp">
-      <Filter>Source Files\Interpolation\Instances</Filter>
+      <Filter>Source Files\Approximation\Instances</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
