--- a/advanced math/advanced math.vcxproj
+++ b/advanced math/advanced math.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>source</RootNamespace>
     <ProjectName>advanced math</ProjectName>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -151,9 +152,12 @@
   <ItemGroup>
     <ClInclude Include="advanced math.h" />
     <ClInclude Include="definitions.h" />
+    <ClInclude Include="equations\equation_boundary.h" />
     <ClInclude Include="equations\equation_differential.h" />
     <ClInclude Include="equations\differential_coeffs.h" />
     <ClInclude Include="equations\sde.h" />
+    <ClInclude Include="equations\solver_boundary.h" />
+    <ClInclude Include="equations\solver_boundary_finite_difference.h" />
     <ClInclude Include="equations\solver_differential.h" />
     <ClInclude Include="equations\solver_predictor_corrector.h" />
     <ClInclude Include="equations\solver_runge_kutta.h" />
